@@ -41,21 +41,28 @@
         <!-- 依赖于mybatis，二者要版本相匹配才行（但mybatis还是显示声明依赖比较好）， 否则报错：Exception in thread
 			"main" java.lang.AbstractMethodError: org.mybatis.spring.transaction.SpringManag
 			http://blog.csdn.net/jiangyeqt/article/details/46515899 -->
-        <dependency>
+       <!-- <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.1.1</version>
-        </dependency>
+        </dependency>-->
 
+        <!--jdbc依赖-->
         <dependency>
-            <groupId>org.springframework.webflow</groupId>
-            <artifactId>spring-webflow</artifactId>
-            <version>2.3.4.RELEASE</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
@@ -94,6 +101,20 @@
                     </connectors>
                 </configuration>
             </plugin>
+
+            <!-- Tomcat插件 -->
+            <!--<plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat6-maven-plugin</artifactId>
+                <version>2.0-beta-1</version>
+                <configuration>
+                    <path>/mybatis-6</path>
+                    <contextReloadable>true</contextReloadable>
+                    <systemProperties>
+                        <JAVA_OPTS>-Xms512m -Xmx512m -XX:PermSize=128M -XX:MaxPermSize=256m</JAVA_OPTS>
+                    </systemProperties>
+                </configuration>
+            </plugin>-->
         </plugins>
     </build>
 
